@@ -1,7 +1,7 @@
 // qjackctlSocketForm.h
 //
 /****************************************************************************
-   Copyright (C) 2003-2013, rncbc aka Rui Nuno Capela. All rights reserved.
+   Copyright (C) 2003-2015, rncbc aka Rui Nuno Capela. All rights reserved.
 
    This program is free software; you can redistribute it and/or
    modify it under the terms of the GNU General Public License
@@ -77,6 +77,7 @@ public slots:
 	void customContextMenu(const QPoint&);
 
 	void socketTypeChanged();
+	void socketNameChanged();
 	void clientNameChanged();
 
 	void stabilizeForm();
@@ -104,6 +105,7 @@ private:
 	// Instance variables.
 	qjackctlSocketList *m_pSocketList;
 	bool                m_bSocketNew;
+	int                 m_iSocketNameChanged;
 	QPixmap           **m_ppPixmaps;
 	int                 m_iDirtyCount;
 
